test_regress/t/t_order_clkinst_bad.out
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:25:16: Imperfect scheduling of variable: 't.s2_count'
   25 |    wire [31:0] s2_count;
      |                ^~~~~~~~
                       ... For warning description see https://verilator.org/warn/IMPERFECTSCH?v=latest
                       ... Use "/* verilator lint_off IMPERFECTSCH */" and lint_on around source to disable this message.
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:73:28: Imperfect scheduling of variable: 't.c1.runner'
   73 |    reg [31:0]    runnerm1, runner; initial runner = 0;
      |                            ^~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:103:28: Imperfect scheduling of variable: 't.s2.runner'
  103 |    reg [31:0]    runnerm1, runner; initial runner = 0;
      |                            ^~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:73:28: Imperfect scheduling of variable: 't.c3.runner'
   73 |    reg [31:0]    runnerm1, runner; initial runner = 0;
      |                            ^~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:21:16: Imperfect scheduling of variable: 't.c1_count'
   21 |    wire [31:0] c1_count;
      |                ^~~~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:29:16: Imperfect scheduling of variable: 't.c3_count'
   29 |    wire [31:0] c3_count;
      |                ^~~~~~~~
%Error: Exiting due to
